--- a/src/static/usuarios.css
+++ b/src/static/usuarios.css
@@ -21,6 +21,46 @@
   color: #333;
 }
 
+.filtro-form {
+  display: flex;
+  gap: 12px;
+  margin-bottom: 20px;
+  flex-wrap: wrap;
+  align-items: center;
+}
+
+.filtro-form input[type="text"],
+.filtro-form select {
+  padding: 8px 12px;
+  border: 1px solid #ccc;
+  border-radius: 6px;
+  font-size: 14px;
+  width: 89%;
+  transition: border-color 0.3s ease;
+}
+
+.filtro-form input[type="text"]:focus,
+.filtro-form select:focus {
+  outline: none;
+  border-color: #ff8c00;
+}
+
+.filtro-form button {
+  padding: 8px 16px;
+  background-color: #ffa600;
+  color: white;
+  font-weight: 600;
+  border: none;
+  border-radius: 6px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  font-size: 14px;
+}
+
+.filtro-form button:hover {
+  background-color: #ffa200cc;
+}
+
 .btn-novo {
   padding: 10px 20px;
   background-color: #ff8c00;
