--- a/src/templates/usuarios.html
+++ b/src/templates/usuarios.html
@@ -9,6 +9,10 @@
     <h2>Lista de Usuários</h2>
     <a class="btn-novo" href="{{ url_for('novo_usuario') }}">Cadastrar Novo Usuário</a>
   </div>
+  <form method="GET" action="{{ url_for('listar_usuarios') }}" class="filtro-form">
+    <input type="text" name="nome" placeholder="Filtrar por nome" value="{{ request.args.get('nome', '') }}">
+    <button type="submit">Filtrar</button>
+  </form>
 
   <table class="usuarios-tabela">
     <thead>
