--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -26,6 +26,9 @@
       <div class="item-menu">
         <a href="{{ url_for('movimentacoes.nova_movimentacao') }}"><i class="fas fa-plus-circle"></i> Cadastrar Retirada</a>
       </div>
+      <div class="item-menu">
+        <a href="{{ url_for('estoque.controle') }}"><i class="fas fa-warehouse"></i> Estoque</a>
+      </div>
       <div class="menu-section">
         <button class="menu-toggle"><i class="fas fa-boxes"></i> Materiais <span class="arrow">▼</span></button>
         <div class="submenu">
