--- a/src/templates/novo_material.html
+++ b/src/templates/novo_material.html
@@ -16,7 +16,7 @@
     <input type="number" name="quantidade" id="quantidade" required>
 
     <label for="lote">Lote:</label>
-    <input type="number" name="lote" id="lote" required>
+    <input type="number" name="lote" id="lote">
 
     <label for="estoque_minimo_chuva">Estoque Mínimo (Chuva):</label>
     <input type="number" name="estoque_minimo_chuva" id="estoque_minimo_chuva" required>
