--- a/src/templates/nova_movimentacao.html
+++ b/src/templates/nova_movimentacao.html
@@ -31,7 +31,7 @@
   <input type="text" name="funcionario" required><br>
 
   <label>Prazo de Devolução:</label>
-  <input type="date" name="prazo_devolucao"><br>
+  <input type="datetime-local" name="prazo_devolucao"><br>
 
   <label>Motivo:</label>
   <select name="motivo">
