--- a/src/templates/movimentacoes.html
+++ b/src/templates/movimentacoes.html
@@ -29,11 +29,18 @@
         <label for="status">Status</label>
         <select name="status" id="status">
           <option value="">Todos</option>
-          <option value="amarelo">Amarelo</option>
-          <option value="verde">Verde</option>
-          <option value="vermelho">Vermelho</option>
+          <option value="amarelo">Pendente</option>
+          <option value="verde">FInalizado</option>
+          <option value="vermelho">Atrasado</option>
         </select>
       </div>
+       <!-- <label for="per_page">Itens por página:</label>
+        <select name="per_page" id="per_page" onchange="this.form.submit()">
+          <option value="5" {% if request.args.get('per_page', '10') == '5' %}selected{% endif %}>5</option>
+          <option value="10" {% if request.args.get('per_page', '10') == '10' %}selected{% endif %}>10</option>
+          <option value="25" {% if request.args.get('per_page') == '25' %}selected{% endif %}>25</option>
+          <option value="50" {% if request.args.get('per_page') == '50' %}selected{% endif %}>50</option>
+        </select> -->
     </div>
 
     <div class="filtro-acoes-container compact">
@@ -90,11 +97,11 @@
             {% if not m.devolvido and not m.utilizado_cliente %}
             <div class="btn-group">
               <button class="btn-acao" type="button" onclick="toggleDropdown('finalizar-{{ m.id }}')">
-                Finalizar ?
+                Finalizar
               </button>
               <div id="finalizar-{{ m.id }}" class="dropdown-acoes" style="display:none;">
                 <form method="POST" action="{{ url_for('movimentacoes.finalizar', id=m.id) }}">
-                  <label>Funcionando?</label>
+                  <label>Funcionando</label>
                   <select name="funcionando" required>
                     <option value="">-- Selecione --</option>
                     <option value="sim">Sim</option>
