--- a/src/templates/movimentacoes.html
+++ b/src/templates/movimentacoes.html
@@ -31,7 +31,7 @@
           <option value="">Todos</option>
           <option value="amarelo">Pendente</option>
           <option value="verde">FInalizado</option>
-          <option value="vermelho">Atrasado</option>
+          <!-- <option value="vermelho">Atrasado</option> -->
         </select>
       </div>
        <!-- <label for="per_page">Itens por página:</label>
