Update: Base.css

--- a/src/static/movimentacoes.css
+++ b/src/static/movimentacoes.css
@@ -314,7 +314,7 @@ button,
 
 button:hover,
 .btn-finalizar:hover {
-  background-color: #218838;
+  background-color: #ff8103cb;
 }
 
 .status-ok {
